--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root{
-    --primary-color: #1d5888;
-    --secondary-color: #ff993b;
+    --primary-color: rgb(0, 0, 0);
+    --secondary-color: #ff0000;
     --dark-color: #292929;
     --white-color: #dff3e4;
 }
